src-core/src/components/form-field/form-field.scss
@import "../../theme/theme";

$max-width-input: 320px;


.se-form-field {
  &.checkbox, &.radio {
    .form-field-wrapper {
      @include justify-content(center);
      &:before {
        content: '';
        display: block;
        flex-basis: 40%;
        height: 1px;
        max-width: 140px;
      }
    }
  }

	.form-field-wrapper {
    @include display-flex();
    padding: $spacing;
    @include align-items(center);
  }

  label {
    width: 100%;
    padding-top: 4px;
    text-align: center;
    @include typology('small');
    @include display-flex;
    @include justify-content(center);
    @include align-items(center);
    >span {
      @include flex(1, 1, 40%);
      max-width: 140px;
      text-align: right;
    }
    .required {
      @include color('error');
      padding-left: 3px;
    }
  }

  ::slotted(se-checkbox) {
    padding-top: 6px;
    flex-basis: 60%;
    max-width: $max-width-input;
  }

  ::slotted(se-radio) {
    flex-basis: 60%;
    max-width: $max-width-input;
  }

  ::slotted(input) {
    height: 28px;
    width: 60%;
    flex-basis: 60%;
    max-width: $max-width-input;
    border: 1px solid;
    @include border-color('hover-standard');
    font-family: inherit;
    font-size: 14px;
    padding-left: 7px;
    margin-left: 7px;
    transition: .2s;
    @include background-color('alternative');
  }
  
  ::slotted(input[disabled]) {
    @include background-color('alternative');
    opacity: 0.5;
  }

  ::slotted(textarea[disabled]) {
    @include background-color('alternative');
    opacity: 0.5;
  }
  
  ::slotted(input:focus) {
    outline: none;
    border: 1px solid;
    @include border-color('primary')
  }

  ::slotted(input[type="date"]) {
    height: 20px;
    padding: 5px;
  }

  @-moz-document url-prefix() {
    ::slotted(input[type="date"]) {
      padding-top: 6px;
      padding-bottom: 4px;
      padding-right: 5px;
    }
  }
  
  ::slotted(select) {
    height: 32px;
    width: 60%;
    border-radius: 0;
    max-width: $max-width-input + 10;
    border: 1px solid;
    @include border-color('hover-standard');
    @include background-color('alternative');
    font-family: inherit;
    font-size: 14px;
    margin-left: 7px;
    padding-left: 4px;
  }

  ::slotted(select[disabled]) {
    opacity: 0.5;
    cursor: default;
  }
  
  ::slotted(textarea) {
    width: 60%;
    max-width: $max-width-input;
    padding-left: 7px;
    margin-left: 7px;
    border: 1px solid;
    @include border-color('hover-standard');
    font-family: inherit;
    resize: vertical;
  }

  ::slotted(input:focus),
  ::slotted(select:focus),
  ::slotted(textarea:focus) {
    outline: none;
    border: 1px solid;
    @include border-color('primary')
  }

  &.stacked {
    .form-field-wrapper {
      flex-direction: column;
      @include align-items(start);
    }
    label {
      padding: 0 8px 4px;
      text-align: left;
      line-height: 12px;
      width: 100%;
      display: block;
      >span {
        display: block;
        max-width: none;
        text-align: left;
        line-height: 1.5;
      }
    }
    ::slotted(se-checkbox) {
      margin-left: 0;
    }
    ::slotted(se-radio) {
      margin-left: 0;
    }
    ::slotted(input) {
      width: 97%;
      margin-left: -7px;
    }
    ::slotted(select) {
      width: 100%;
      margin-left: -7px;
    }
    ::slotted(textarea) {
      width: 97%;
      max-width: none;
      margin-left: -7px;
    }
  }

  &.error {
    ::slotted(input) {
      border: 1px solid;
      @include border-color('error');
    }
  }

  &.warning {
    ::slotted(input) {
      border: 1px solid;
      @include border-color('warning');
    }
  }

  &.success {
    ::slotted(input) {
      border: 1px solid;
      @include border-color('success')
    }
  }
}

